--- a/.htaccess
+++ b/.htaccess
@@ -1,53 +1,47 @@
-# Arquivo .htaccess principal
-# Redireciona todas as requisições para a pasta public
-
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    RewriteBase /simaorefrigeracao/
     
-    # Não redirecionar se o arquivo ou diretório existir na raiz
-    RewriteCond %{REQUEST_URI} !^/public/
+    # Redirecionar para HTTPS (descomente se necessário)
+    # RewriteCond %{HTTPS} off
+    # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    
+    # Não redirecionar arquivos e diretórios existentes
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     
-    # Redirecionar para a pasta public
-    RewriteRule ^(.*)$ public/$1 [L]
-    
-    # Redirecionar URLs antigas para a nova estrutura
-    RewriteRule ^admin-([a-z-]+)\.php$ public/admin/$1.php [R=301,L]
-    RewriteRule ^tecnico-([a-z-]+)\.php$ public/tecnico/$1.php [R=301,L]
-    
-    # Se o arquivo não existir na pasta public, redirecionar para o index.php
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^public/(.*)$ public/index.php [QSA,L]
+    # Redirecionar todas as outras requisições para index.php
+    RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
-
-# Configurações de PHP
-<IfModule mod_php7.c>
-    php_value upload_max_filesize 10M
-    php_value post_max_size 10M
-    php_value max_execution_time 300
-    php_value max_input_time 300
-</IfModule>
-
-# Configurações de segurança
-<IfModule mod_headers.c>
-    Header set X-Content-Type-Options "nosniff"
-    Header set X-XSS-Protection "1; mode=block"
-    Header set X-Frame-Options "SAMEORIGIN"
-    Header set Referrer-Policy "strict-origin-when-cross-origin"
-</IfModule>
-
-# Desabilitar listagem de diretórios
-Options -Indexes
 
 # Proteger arquivos sensíveis
-<FilesMatch "^(\.htaccess|\.env|composer\.json|composer\.lock)$">
+<FilesMatch "^(\.htaccess|\.htpasswd|config\.php|database\.php)$">
     Order Allow,Deny
     Deny from all
 </FilesMatch>
 
-# Proteger diretórios sensíveis
-<IfModule mod_rewrite.c>
-    RewriteRule ^(config|src|controllers|vendor)/.*$ - [F,L]
+# Desativar listagem de diretórios
+Options -Indexes
+
+# Definir página de erro 404
+ErrorDocument 404 /simaorefrigeracao/erro
+
+# Definir charset padrão
+AddDefaultCharset UTF-8
+
+# Configurações de cache para arquivos estáticos
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/pdf "access plus 1 month"
+    ExpiresByType text/javascript "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType application/x-javascript "access plus 1 month"
+    ExpiresByType application/x-shockwave-flash "access plus 1 month"
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresDefault "access plus 2 days"
 </IfModule>
