feat: Add deployment guide and CI/CD setup
- Created a comprehensive deployment guide in `docs/deployment.md` for both development and production environments, including Docker setup and useful commands.
- Integrated GitHub Actions for code quality checks, static analysis, and automated testing.

feat: Implement PHPStan configuration

- Added `phpstan.neon` configuration file to set up static analysis for the project, excluding specific paths and ignoring certain errors.

feat: Configure PHPUnit for testing

- Created `phpunit.xml` to define test suites and coverage reporting for unit, integration, and functional tests.

feat: Define client routes

- Implemented RESTful routes for client management in `routes/clienteRoutes.php`, including CRUD operations and search functionality.

feat: Create ClienteDTO for data transfer

- Introduced `ClienteDTO` class to handle client data transfer between layers, with methods for converting to and from arrays.

feat: Implement event system for client updates

- Created event classes `ClienteCriadoEvent` and `ClienteAtualizadoEvent` to handle client creation and update events.

feat: Develop ClienteFactory for entity creation

- Added `ClienteFactory` to facilitate the creation of `Cliente` entities from DTOs and vice versa.

feat: Implement ClienteApplicationService for business logic

- Developed `ClienteApplicationService` to manage client-related operations, including creation, updating, retrieval, and deletion.

feat: Define domain entities and value objects

- Created domain entities such as `Cliente`, `AgendamentoStatus`, `ClienteTipo`, and value objects `Email` and `Telefone` with validation logic.

feat: Implement repository interfaces for data access

- Defined repository interfaces for `Cliente` and `Agendamento` to abstract data access methods.

feat: Add validation service for entity validation

- Introduced `ValidationService` to handle validation logic using Symfony's Validator component.

feat: Create fixtures for

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-# Configurações do banco de dados
+APP_ENV=dev
+APP_DEBUG=true
+
 DB_HOST=localhost
+DB_PORT=3306
 DB_NAME=simaorefrigeracao
 DB_USER=root
-DB_PASS=
+DB_PASSWORD=
 
-# Configurações da aplicação
-APP_DEBUG=true
-APP_URL=http://localhost/simaorefrigeracao
+CACHE_DRIVER=file
+LOG_LEVEL=debug
