--- a/composer.json
+++ b/composer.json
@@ -4,23 +4,46 @@
     "type": "project",
     "require": {
         "php": ">=8.1",
-        "doctrine/orm": "^2.11",
-        "doctrine/dbal": "^3.2",
-        "symfony/cache": "^5.4",
-        "doctrine/annotations": "^1.13",
-        "doctrine/migrations": "^3.5"
+        "doctrine/orm": "^2.17",
+        "doctrine/dbal": "^3.7",
+        "doctrine/migrations": "^3.7",
+        "symfony/dependency-injection": "^6.4",
+        "symfony/config": "^6.4",
+        "symfony/yaml": "^6.4",
+        "symfony/console": "^6.4",
+        "symfony/http-foundation": "^6.4",
+        "symfony/routing": "^6.4",
+        "symfony/validator": "^6.4",
+        "symfony/serializer": "^6.4",
+        "symfony/cache": "^6.4",
+        "monolog/monolog": "^3.5"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.5",
+        "symfony/var-dumper": "^6.4",
+        "friendsofphp/php-cs-fixer": "^3.40",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-doctrine": "^1.3"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
     "scripts": {
-        "migrations:diff": "doctrine-migrations migrations:diff",
-        "migrations:migrate": "doctrine-migrations migrations:migrate",
-        "migrations:generate": "doctrine-migrations migrations:generate",
-        "orm:schema-tool:create": "doctrine orm:schema-tool:create",
-        "orm:schema-tool:update": "doctrine orm:schema-tool:update",
-        "orm:validate-schema": "doctrine orm:validate-schema"
+        "cs-fix": "php-cs-fixer fix",
+        "cs-check": "php-cs-fixer fix --dry-run --diff",
+        "phpstan": "phpstan analyse src --level=5",
+        "test": "phpunit",
+        "quality": [
+            "@cs-check",
+            "@phpstan",
+            "@test"
+        ]
     }
 }
